# charge-controller-firmware

./: dfasdfoinasdf
boards/arm/owntech_board/: owntech_board.dts  owntech_board.yaml
boards/arm/owntech_board/support/: openocd.cfg
src/: CMakeLists.txt  half_bridge.cpp  half_bridge.h  hrtim.c  hrtim.h  leg.c  leg.h  leg_conf.h  main.c
zephyr/: prj.conf
